tests/data/fortran/errors/parser/err_unknown_type_derived_type.f90
module m
  type :: t
    weirdtype :: x
  end type t
end module m
